[package]
name = "dice-command-parser"
version = "0.5.0"
description = "A library for parsing basic dice roll commands like 2d20 + 2"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/arranf/dice-command-parser"
readme = "README.md"
keywords = ["dnd", "dice", "parser"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1"
thiserror = "1.0"