[package]
name = "dice-command-parser"
version = "0.8.0"
description = "A library for parsing basic dice roll commands like 2d20 + 2a"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/arranf/dice-command-parser"
readme = "README.md"
keywords = ["dnd", "dice", "parser", "ttrpg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
thiserror = "1.0.56"
